<resources>
    <string name="app_name">House of Code Development Task</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="login_label">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="go_to_facebook_login_button">Go to Facebook login</string>

    <string name="facebook_app_id">794412091004359</string>
    <string name="fb_login_protocol_scheme">fb794412091004359</string>

    <string name="chat_input_message_hint">Input</string>


    <string name="hello_second_fragment">Hello second fragment</string>

    <string name="db_value_hint1">Value 1</string>
    <string name="db_value_hint2">Value 2</string>
    <string name="db_send_data">Send data</string>

</resources>
